--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,11 @@ jobs:
 
     - name: Check out code
       uses: actions/checkout@v3
-    
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -47,5 +51,6 @@ jobs:
         ECR_REPOSITORY: xgileit
         IMAGE_TAG: latest
       run: |
+        run: mvn --batch-mode --update-snapshots package
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
