--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
     
     name: Build Image
     runs-on: ubuntu-latest
-
+    needs: [build_and_test]
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
 
