--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,17 +34,10 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-
-    - name: Install and configure AWS CLI, kubectl, and aws-iam-authenticator
-      run: |
-        sudo apt-get install -y awscli
-        sudo apt-get install -y kubectl
-        curl -o aws-iam-authenticator https://amazon-eks.s3.us-west-2.amazonaws.com/1.21.2/2021-07-05/bin/linux/amd64/aws-iam-authenticator
-        chmod +x ./aws-iam-authenticator
-        sudo mv aws-iam-authenticator /usr/local/bin/
-        echo ${{ secrets.KUBECONFIG }} | base64 --decode > kubeconfig.yaml
-
-    - name: Deploy to EKS
-      run: |
-        export KUBECONFIG=kubeconfig.yaml
-        kubectl kustomize k8s | kubectl apply -f -
+    
+    - name: Deploy to Kubernetes cluster                                                                            
+      uses: kodermax/kubectl-aws-eks@master                                                                         
+      env:                                                                                                          
+        RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
+    with:                                                                                                         
+      args: set image deployment/my-pod app=${{ env.RELEASE_IMAGE }} --record   
