--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,15 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
     
     - name: Deploy to Kubernetes cluster                                                                            
-      uses: kodermax/kubectl-aws-eks@master                                                                         
-      env:                                                                                                          
-        RELEASE_IMAGE: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:latest
-      with:                                                                                                        
-        args: set image deployment/my-pod app=${{ env.RELEASE_IMAGE }} --record   
+      uses: azure/setup-kubectl@v3
+      with:
+       version: latest # default is latest stable
+      id: install	  
+    
+    - name : update config
+      run : aws eks update-kubeconfig --name test_cluster
+    
+    - name : Deploy to EKS
+      run: |  
+        kubectl apply -f deployments/deployment.yaml
+        kubectl apply -f deployments/service.yaml
