--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,5 @@ jobs:
     
     - name : Deploy to EKS
       run: |  
-        kubectl apply -f aws/deployments/deployment.yaml
-        kubectl apply -f aws/deployments/service.yaml
+        kubectl apply -f ../../deployments/deployment.yaml
+        kubectl apply -f ../../aws/deployments/service.yaml
