--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       id: install	  
     
     - name : update config
-      run : aws eks --region us-east-2 update-kubeconfig --name test_cluster
+      run : aws eks --region us-west-1 update-kubeconfig --name hrm_cluster
     
     - name : Deploy to EKS
       run: |  
