--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,20 +1,34 @@
 apiVersion: apps/v1
-kind: Deployment # Kubernetes resource kind we are creating
+kind: Deployment
 metadata:
   name: aws-demo-01
+  labels:
+    app: system
 spec:
   selector:
     matchLabels:
-      app: aws-demo-01
-  replicas: 2 # Number of replicas that will be created for this deployment
+      app: system
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
   template:
     metadata:
       labels:
-        app: aws-demo-01
+        app: system
     spec:
       containers:
-        - name: aws-demo-01
-          image: 529987245700.dkr.ecr.us-east-1.amazonaws.com/xgileit # Image that will be used to containers in the cluster
-          imagePullPolicy: IfNotPresent
-          ports:
-            - containerPort: 8080 # The port that the container is running on in the cluster
+      - name: aws-demo-01
+        image: 529987245700.dkr.ecr.us-east-1.amazonaws.com/xgileit
+		imagePullPolicy: IfNotPresent
+        ports:
+        - containerPort: 8080
+        readinessProbe:
+          httpGet:
+            path: /health/ready
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 3
+          failureThreshold: 1
